--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>Goku</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 </head>
 
 <body>
     <header>
-        <!-- Aquí va el encabezado de tu página -->
     </header>
     <main>
         <div id="slide1" hx-get="slides/slide1.html" hx-trigger="load">
-            <!-- La primera diapositiva se carga automáticamente al cargar la página -->
         </div>
     </main>
     <footer>
-        <!-- Aquí va el pie de página -->
     </footer>
 </body>
 
